--- a/content/network/src/main/res/xml/bigbrother_activity_network_entry_scene.xml
+++ b/content/network/src/main/res/xml/bigbrother_activity_network_entry_scene.xml
@@ -7,7 +7,7 @@
         motion:constraintSetStart="@id/start"
         motion:duration="1000">
 
-        <OnSwipe motion:touchAnchorId="@id/net_entry_details_scroll" />
+        <OnSwipe motion:touchAnchorId="@id/net_entry_details_web" />
 
         <KeyFrameSet>
             <KeyPosition
@@ -18,7 +18,17 @@
         </KeyFrameSet>
     </Transition>
 
-    <ConstraintSet android:id="@+id/start"></ConstraintSet>
+    <ConstraintSet android:id="@+id/start">
+        <Constraint
+            android:id="@+id/net_entry_details_loading_container"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toBottomOf="@id/net_entry_details_toolbar"
+            motion:visibilityMode="ignore" />
+    </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
@@ -57,8 +67,17 @@
             android:id="@+id/net_entry_details_copy_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            motion:layout_constraintBottom_toBottomOf="@id/net_entry_details_toolbar"
             motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toTopOf="@id/net_entry_details_toolbar"
-            motion:layout_constraintBottom_toBottomOf="@id/net_entry_details_toolbar"/>
+            motion:layout_constraintTop_toTopOf="@id/net_entry_details_toolbar" />
+        <Constraint
+            android:id="@+id/net_entry_details_loading_container"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            motion:visibilityMode="ignore"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toBottomOf="@id/net_entry_details_toolbar" />
     </ConstraintSet>
 </MotionScene>
