--- a/content/report/src/main/res/values/bigbrother_strings.xml
+++ b/content/report/src/main/res/values/bigbrother_strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="report_session_search_hint">Date</string>
     <string name="report_session_session">Session %d</string>
+    <string name="report_session_requests">Network calls</string>
 </resources>
