--- a/content/common/src/main/res/values-pt/bigbrother_strings.xml
+++ b/content/common/src/main/res/values-pt/bigbrother_strings.xml
@@ -4,4 +4,5 @@
 
     <string name="select_all">Selecionar todos</string>
     <string name="deselect_all">Desmarcar todos</string>
+    <string name="close">Fechar</string>
 </resources>
