--- a/content/common/src/main/res/values/bigbrother_strings.xml
+++ b/content/common/src/main/res/values/bigbrother_strings.xml
@@ -5,4 +5,5 @@
 
     <string name="select_all">Select all</string>
     <string name="deselect_all">Deselect all</string>
+    <string name="close">Close</string>
 </resources>
