--- a/content/network/src/main/res/values-pt/bigbrother_strings.xml
+++ b/content/network/src/main/res/values-pt/bigbrother_strings.xml
@@ -6,11 +6,13 @@
     <string name="json_viewer_disclaimer">Clique e segure em cima de qualquer item para copiar os dados</string>
     <string name="json_viewer_copy_feedback">key %1s copiado</string>
 
+    <string name="network_list_title">Requesições da sessão %d</string>
     <string name="network_search_hint">Procure por método, status code ou url</string>
     <string name="network_hour_info">Horário:</string>
     <string name="network_elapsed_time_info">Tempo corrido:</string>
     <string name="network_url_info">URL:</string>
     <string name="network_copy">Copiar como cURL</string>
+    <string name="network_empty_state">Nenhuma requisição para essa sessão</string>
     <string name="network_copy_all_template">
 URL: %s\n
 Method: %s\n
