--- a/content/network/src/main/res/values/bigbrother_strings.xml
+++ b/content/network/src/main/res/values/bigbrother_strings.xml
@@ -6,11 +6,13 @@
     <string name="json_viewer_disclaimer">click and hold on any item to copy it to the clipboard</string>
     <string name="json_viewer_copy_feedback">key %1s copied</string>
 
+    <string name="network_list_title">Session %d calls</string>
     <string name="network_search_hint">Search by method, code or url</string>
     <string name="network_hour_info">Hour:</string>
     <string name="network_elapsed_time_info">Elapsed time:</string>
     <string name="network_url_info">URL:</string>
     <string name="network_copy">Copy as cURL</string>
+    <string name="network_empty_state">No requests for this session</string>
     <string name="network_copy_all_template">
 URL: %s\n
 Method: %s\n
