--- a/content/report/src/main/res/values-pt/bigbrother_strings.xml
+++ b/content/report/src/main/res/values-pt/bigbrother_strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="report_session_search_hint">Data</string>
     <string name="report_session_session">Sessão %d</string>
+    <string name="report_session_requests">Requisições da seção</string>
 </resources>
