--- a/content/common/src/main/res/values/bigbrother_ids.xml
+++ b/content/common/src/main/res/values/bigbrother_ids.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="tag_view_holder" type="id"/>
+    <item name="searchable_recycler_view" type="id" />
+    <item name="searchable_toolbar" type="id" />
+    <item name="searchable_view_layout" type="id" />
 </resources>
