--- a/content/database/src/main/res/layout/bigbrother_view_filter.xml
+++ b/content/database/src/main/res/layout/bigbrother_view_filter.xml
@@ -88,7 +88,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/filter_view_search_layout"
-                style="@style/SQL"
+                style="@style/input_outlined"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
