--- a/content/common/src/main/res/values/bigbrother_strings.xml
+++ b/content/common/src/main/res/values/bigbrother_strings.xml
@@ -7,4 +7,5 @@
     <string name="deselect_all">Deselect all</string>
     <string name="close">Close</string>
     <string name="copy_feedback">key %1s copied</string>
+    <string name="search_hint">Search key or value</string>
 </resources>
