--- a/content/database/src/main/res/layout/bigbrother_activity_shared_preferences_details.xml
+++ b/content/database/src/main/res/layout/bigbrother_activity_shared_preferences_details.xml
@@ -31,7 +31,7 @@
             android:id="@+id/property_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/json_viewer_search_hint" />
+            android:hint="@string/search_hint" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
