--- a/content/network/src/main/res/layout/bigbrother_activity_json_viewer.xml
+++ b/content/network/src/main/res/layout/bigbrother_activity_json_viewer.xml
@@ -30,7 +30,7 @@
             android:id="@+id/json_viewer_search_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/json_viewer_search_hint" />
+            android:hint="@string/search_hint" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
